--- a/package.json
+++ b/package.json
@@ -22,21 +22,22 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "ts-helpers": "^1.1.1",
+    "@ngtools/webpack": "^1.2.4",
     "chart.js": "^2.7.1",
-    "ng2-charts": "^1.6.0"
+    "core-js": "^2.4.1",
+    "ng2-charts": "^1.6.0",
+    "rxjs": "^5.5.2",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "^4.0.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -48,6 +49,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"    
+    "typescript": "~2.4.2"
   }
 }
